--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
+  "build": {
+    "outputDirectory": "dist"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
